Bug #58127
multisite: test_zg_master_zone_delete fails
% Done:
0%
Source:
Tags:
multisite
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Description
$ radosgw-admin period update --commit ERROR: zonegroup remove_zg should have a master zone
a regression from https://github.com/ceph/ceph/pull/47679
History
#1 Updated by Casey Bodley 2 months ago
- Assignee set to Casey Bodley
#2 Updated by Casey Bodley 2 months ago
- Status changed from New to Fix Under Review
- Pull request ID set to 49176
#3 Updated by Casey Bodley 15 days ago
- Status changed from Fix Under Review to Resolved