rgw: preserve RGWZoneGroup::master_zone on last zone deletion

the logic to clear master_zone was added recently in
https://github.com/ceph/ceph/pull/47679, but broke the multisite test
case test_zg_master_zone_delete:

  $ radosgw-admin period update --commit
  ERROR: zonegroup remove_zg should have a master zone

Fixes: https://tracker.ceph.com/issues/58127

Signed-off-by: Casey Bodley <cbodley@redhat.com>